[package]
name = "wgsl-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
env_logger = "0.9.0"
anyhow = "1"
wgpu = "0.12"
tokio = { version = "1.17.0", features = ["full"] }
png = "0"
